--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,19 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+# Byte-compiled / cache
+__pycache__/
+*.py[cod]
+*.ipynb_checkpoints/
+
+# Environment
+venv/
+.env
+*.env
+
+# Data files
+data/
+*.csv
+
+# VSCode
+.vscode/
