--- a/.gitignore
+++ b/.gitignore
@@ -177,8 +177,8 @@ __pycache__/
 *.py[cod]
 *.ipynb_checkpoints/
 
-# Environment
-venv/
+# Environment, all conda environments
+venv/ 
 .env
 *.env
 
