fix : included clean datasets to repo for temporary deployment

--- a/.gitignore
+++ b/.gitignore
@@ -183,8 +183,11 @@ venv/
 *.env
 
 # Data files
-data/
-*.csv
+# data/
+# *.csv
+data/benin-malanville.csv
+data/sierraleone-bumbuna.csv
+data/togo-dapaong_qc.csv
 
 # VSCode
 .vscode/
